--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.3",
     "jest": "^28.1.1",
+    "lint-staged": "^13.0.2",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
   },
