--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,12 @@
 {
   "extends": "standard-with-typescript",
-  "parserOptions": { "project": "./tsconfig.json" }
+  "parserOptions": { "project": "./tsconfig.json" },
+  "rules": {
+    "@typescript-eslint/consistent-type-definitions": "off",
+    "@typescript-eslint/no-namespace": "off",
+    "@typescript-eslint/return-await": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off"
+  }
 }
