--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.8",
     "@types/jest": "^28.1.2",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.0.0",
@@ -23,6 +24,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
+    "faker": "5.5.3",
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
     "jest": "^28.1.1",
