--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^3.0.1",
     "@types/faker": "^5.5.8",
     "@types/jest": "^28.1.2",
     "@types/module-alias": "^2.0.1",
@@ -34,7 +35,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/mongodb": "^4.0.7",
     "module-alias": "^2.2.2",
+    "mongodb": "^4.7.0",
     "rimraf": "^3.0.2"
   }
 }
