--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@types/mongodb": "^4.0.7",
+    "dotenv": "^16.0.1",
     "module-alias": "^2.2.2",
     "mongodb": "^4.7.0",
     "rimraf": "^3.0.2"
