--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^3.0.1",
+    "@types/express": "^4.17.13",
     "@types/faker": "^5.5.8",
     "@types/jest": "^28.1.2",
     "@types/module-alias": "^2.0.1",
@@ -37,6 +38,7 @@
   "dependencies": {
     "@types/mongodb": "^4.0.7",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "module-alias": "^2.2.2",
     "mongodb": "^4.7.0",
     "rimraf": "^3.0.2"
