--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/main/server.ts",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:unit": "npm t -- --watch -c jest-unit-config.js",
@@ -33,6 +34,7 @@
     "jest-mock-extended": "^2.0.6",
     "lint-staged": "^13.0.2",
     "ts-jest": "^28.0.5",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
