--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^28.1.2",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.0.0",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^21.0.1",
@@ -33,6 +34,7 @@
     "jest": "^28.1.1",
     "jest-mock-extended": "^2.0.6",
     "lint-staged": "^13.0.2",
+    "supertest": "^6.2.3",
     "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
