--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^3.0.1",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.8",
     "@types/jest": "^28.1.2",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "@types/mongodb": "^4.0.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "module-alias": "^2.2.2",
