--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@jest-mock/express": "^2.0.0",
     "@shelf/jest-mongodb": "^3.0.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
